fix(compiler): remove java 21 `getFirst` use