@@ -36,7 +36,7 @@ public class ConstantParser extends ParserAlgorithm<ConstantDeclare> {
             get();
 
         if (!context.currentAnnotations().isEmpty()) {
-            context.syntaxError(context.currentAnnotations().getFirst().name(), "Annotations not allowed for constants");
+            context.syntaxError(context.currentAnnotations().get(0).name(), "Annotations not allowed for constants");
             throw new UnsupportedOperationException("Annotations not allowed for constants");
         }
 
